--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -643,6 +643,47 @@
 
     </integer-array>
 
+    <integer-array name="meto_contact_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>53</item> <item>1</item>           <item>231</item> <item>1</item>
+        <item>2</item> <item>81</item> <item>2</item>           <item>198</item> <item>2</item>
+        <item>3</item> <item>114</item> <item>2</item>           <item>167</item> <item>2</item>
+        <item>4</item> <item>117</item> <item>15</item>           <item>164</item> <item>15</item>
+        <item>5</item> <item>51</item> <item>44</item>           <item>232</item> <item>44</item>
+        <item>6</item> <item>81</item> <item>44</item>           <item>199</item> <item>44</item>
+        <item>7</item> <item>116</item> <item>48</item>           <item>165</item> <item>48</item>
+        <item>8</item> <item>22</item> <item>66</item>           <item>250</item> <item>66</item>
+        <item>9</item> <item>51</item> <item>66</item>           <item>230</item> <item>66</item>
+        <item>10</item> <item>81</item> <item>66</item>           <item>200</item> <item>66</item>
+        <item>11</item> <item>116</item> <item>76</item>           <item>166</item> <item>76</item>
+        <item>12</item> <item>17</item> <item>87</item>           <item>264</item> <item>87</item>
+        <item>13</item> <item>51</item> <item>86</item>           <item>230</item> <item>86</item>
+        <item>14</item> <item>81</item> <item>85</item>           <item>201</item> <item>85</item>
+        <item>15</item> <item>-19</item> <item>102</item>           <item>299</item> <item>102</item>
+        <item>16</item> <item>17</item> <item>106</item>           <item>264</item> <item>106</item>
+        <item>17</item> <item>51</item> <item>105</item>           <item>230</item> <item>105</item>
+        <item>18</item> <item>81</item> <item>104</item>           <item>202</item> <item>104</item>
+        <item>19</item> <item>116</item> <item>103</item>           <item>167</item> <item>103</item>
+
+
+
+    </integer-array>
+
+    <integer-array name="meto_wood_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>58</item> <item>49</item>           <item>223</item> <item>49</item>
+        <item>2</item> <item>91</item> <item>49</item>           <item>191</item> <item>49</item>
+        <item>3</item> <item>-8</item> <item>74</item>           <item>290</item> <item>74</item>
+        <item>4</item> <item>37</item> <item>74</item>           <item>247</item> <item>74</item>
+        <item>5</item> <item>82</item> <item>74</item>           <item>201</item> <item>74</item>
+        <item>6</item> <item>-8</item> <item>100</item>           <item>290</item> <item>100</item>
+        <item>7</item> <item>45</item> <item>100</item>           <item>238</item> <item>100</item>
+        <item>8</item> <item>97</item> <item>100</item>           <item>186</item> <item>100</item>
+
+    </integer-array>
+
     <string-array name="grades">
         <item>5a</item>
         <item>5b</item>
@@ -1924,6 +1965,110 @@
         <item>50</item> <!-- four -->
 
     </integer-array>
+
+    <integer-array name="grip_values_meto_contact">
+        <item>1</item>     <item>1</item>       <item>10</item>
+        <item>1</item>     <item>1</item>       <item>20</item>
+        <item>1</item>     <item>1</item>       <item>30</item>
+
+        <item>2</item>     <item>1</item>       <item>10</item>
+        <item>2</item>     <item>1</item>       <item>20</item>
+        <item>2</item>     <item>1</item>       <item>30</item>
+
+        <item>3</item>     <item>1</item>       <item>10</item>
+        <item>3</item>     <item>1</item>       <item>20</item>
+        <item>3</item>     <item>1</item>       <item>30</item>
+
+        <item>4</item>     <item>1</item>       <item>10</item>
+        <item>4</item>     <item>1</item>       <item>20</item>
+        <item>4</item>     <item>1</item>       <item>30</item>
+
+        <item>5</item>     <item>1</item>       <item>10</item>
+        <item>5</item>     <item>1</item>       <item>20</item>
+        <item>5</item>     <item>1</item>       <item>30</item>
+
+        <item>6</item>     <item>55</item>       <item>40</item>
+        <item>6</item>     <item>55</item>       <item>50</item>
+        <item>6</item>     <item>55</item>       <item>60</item>
+
+        <item>7</item>     <item>1</item>       <item>10</item>
+        <item>7</item>     <item>1</item>       <item>20</item>
+        <item>7</item>     <item>1</item>       <item>30</item>
+
+        <item>8</item>     <item>1</item>       <item>20</item>
+        <item>8</item>     <item>1</item>       <item>30</item>
+
+        <item>9</item>     <item>1</item>       <item>20</item>
+        <item>9</item>     <item>1</item>       <item>30</item>
+
+        <item>10</item>     <item>55</item>       <item>40</item>
+        <item>10</item>     <item>55</item>       <item>50</item>
+        <item>10</item>     <item>55</item>       <item>60</item>
+
+        <item>11</item>     <item>1</item>       <item>10</item>
+        <item>11</item>     <item>1</item>       <item>20</item>
+        <item>11</item>     <item>1</item>       <item>30</item>
+
+        <item>12</item>     <item>1</item>       <item>10</item>
+        <item>12</item>     <item>1</item>       <item>20</item>
+        <item>12</item>     <item>1</item>       <item>30</item>
+
+        <item>13</item>     <item>1</item>       <item>20</item>
+        <item>13</item>     <item>1</item>       <item>30</item>
+
+        <item>14</item>     <item>55</item>       <item>40</item>
+        <item>14</item>     <item>55</item>       <item>50</item>
+        <item>14</item>     <item>55</item>       <item>60</item>
+
+        <item>16</item>     <item>1</item>       <item>10</item>
+        <item>16</item>     <item>1</item>       <item>20</item>
+        <item>16</item>     <item>1</item>       <item>30</item>
+
+        <item>17</item>     <item>1</item>       <item>20</item>
+        <item>17</item>     <item>1</item>       <item>30</item>
+
+        <item>18</item>     <item>55</item>       <item>40</item>
+        <item>18</item>     <item>55</item>       <item>50</item>
+        <item>18</item>     <item>55</item>       <item>60</item>
+
+        <item>19</item>     <item>1</item>       <item>10</item>
+        <item>19</item>     <item>1</item>       <item>20</item>
+        <item>19</item>     <item>1</item>       <item>30</item>
+
+    </integer-array>
+
+<integer-array name="grip_values_meto_wood">
+    <item>1</item>     <item>1</item>       <item>20</item>
+    <item>1</item>     <item>1</item>       <item>30</item>
+
+    <item>2</item>     <item>55</item>       <item>40</item>
+    <item>2</item>     <item>55</item>       <item>50</item>
+    <item>2</item>     <item>55</item>       <item>60</item>
+
+    <item>3</item>     <item>55</item>       <item>40</item>
+    <item>3</item>     <item>55</item>       <item>50</item>
+    <item>3</item>     <item>55</item>       <item>60</item>
+
+    <item>4</item>     <item>1</item>       <item>20</item>
+    <item>4</item>     <item>1</item>       <item>30</item>
+
+    <item>5</item>     <item>1</item>       <item>10</item>
+    <item>5</item>     <item>1</item>       <item>20</item>
+    <item>5</item>     <item>1</item>       <item>30</item>
+
+    <item>6</item>     <item>55</item>       <item>40</item>
+    <item>6</item>     <item>55</item>       <item>50</item>
+    <item>6</item>     <item>55</item>       <item>60</item>
+
+    <item>7</item>     <item>1</item>       <item>10</item>
+    <item>7</item>     <item>1</item>       <item>20</item>
+    <item>7</item>     <item>1</item>       <item>30</item>
+
+    <item>8</item>     <item>1</item>       <item>10</item>
+    <item>8</item>     <item>1</item>       <item>20</item>
+    <item>8</item>     <item>1</item>       <item>30</item>
+
+</integer-array>
 
     <integer-array name="grip_values_problemsolver">
 
