--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -589,17 +589,17 @@
     </integer-array>
 
     <string-array name="grades">
-        <item>5a</item>
-        <item>5b</item>
-        <item>5c</item>
-        <item>6a</item>
-        <item>6b</item>
-        <item>6c</item>
-        <item>7a</item>
-        <item>7b</item>
-        <item>7c</item>
-        <item>8a</item>
-        <item>8b</item>
+        <item>5A</item>
+        <item>5B</item>
+        <item>5C</item>
+        <item>6A</item>
+        <item>6B</item>
+        <item>6C</item>
+        <item>7A</item>
+        <item>7B</item>
+        <item>7C</item>
+        <item>8A</item>
+        <item>8B</item>
     </string-array>
 
 
